<resources>
    <string name="app_name">Call of Duty Armory</string>

    <string name="start_tvInfo">All the franchise weapons in one place.</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>

    <string name="signin_tvTitle">Sign In</string>
    <string name="signin_etUsername">Username</string>

    <string name="about1_tvTitle">About</string>
    <string name="about1_tvInfo1">Welcome to Call of Duty\'s Armory.\n\nHere you can explore all the franchise weapons gallery grouped by its own game.</string>
    <string name="about1_tvInfo2">For more info tap on a weapon to open its hidden details.</string>
    <string name="about2_tvInfo1">You can also mark your favorite weapons to see them later in the favorites section.</string>
    <string name="btnGetStarted">Get started</string>

    <string name="btnSignOut">Sign Out</string>
    <string name="btnAbout">About</string>

    <string name="mw_title">Modern Warfare Armory</string>
    <string name="mwii_title">Modern Warfare II Armory</string>
    <string name="bottomnav_armory">Armory</string>
    <string name="bottomnav_favweapons">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>