<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SigninFragment"

    android:background="@color/splashbg" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/bg"
        android:alpha="0.1" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etUsername"
        android:fontFamily="@font/anybody_black"
        android:text="@string/signin_tvTitle"
        android:textColor="@color/custom_light"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:inputType="text"
        android:background="@drawable/style_edittext"
        android:singleLine="true"
        android:hint="@string/signin_etUsername"
        android:textColorHint="@color/custom_darklight"
        android:fontFamily="@font/anybody_black"
        android:textColor="@color/custom_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="150dp"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/custom_light"
        android:fontFamily="@font/anybody_black"
        android:text="@string/btnSignIn"
        android:textColor="@color/splashbg"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>