<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StartFragment"

    android:background="@color/splashbg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/bg"
        android:alpha="0.2" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvInfo"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_coda" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:fontFamily="@font/anybody_black"
        android:text="@string/start_tvInfo"
        android:textColor="@color/custom_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="150dp"
        android:layout_height="65dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo"
        app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/custom_primary"
        android:fontFamily="@font/anybody_black"
        android:text="@string/btnSignIn"
        android:textColor="@color/custom_light"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="65dp"
        app:layout_constraintStart_toEndOf="@+id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/custom_light"
        android:fontFamily="@font/anybody_black"
        android:text="@string/btnSignUp"
        android:textColor="@color/splashbg"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>