<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.About1Fragment"

    android:background="@color/splashbg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/bg"
        android:alpha="0.1" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:padding="10dp"
        android:fontFamily="@font/anybody_black"
        android:text="@string/about1_tvTitle"
        android:textSize="28sp"
        android:textStyle="normal"
        android:textColor="@color/custom_light" />

    <TextView
        android:id="@+id/tvInfo1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ivWeaponpv"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:fontFamily="@font/anybody_black"
        android:text="@string/about1_tvInfo1"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/custom_darklight" />

    <ImageView
        android:id="@+id/ivWeaponpv"
        android:layout_width="200dp"
        android:layout_height="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvInfo2"
        android:src="@drawable/img_weapon" />

    <TextView
        android:id="@+id/tvInfo2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWeaponpv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:padding="10dp"
        android:fontFamily="@font/anybody_black"
        android:text="@string/about1_tvInfo2"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/custom_darklight" />

</androidx.constraintlayout.widget.ConstraintLayout>